# actix-sqlx-docker

./: .gitignore  README.md  compose.sh  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml
client/: .eslintrc.cjs  Dockerfile  babel.config.cjs  jest.config.cjs  package.json  vite.config.ts
server/: .dockerignore  Cargo.toml  Dockerfile  Dockerfile.dev  Dockerfile.prod
server/src/: main.rs
