[package]
name = "actix-sqlx-vite"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13"
actix-web = "4"
dotenv = "0.15.0"
serde_json = "1.0.89"

[dependencies.chrono]
version = "0.4.23"
features = [ "serde" ]

[dependencies.serde]
version = "1.0.150"
features = [ "derive" ]

[dependencies.sqlx]
version = "0.6.2"
features = [ "runtime-async-std-native-tls", "postgres", "chrono", "time", "uuid" ]

[dependencies.uuid]
version = "1.2.2"
features = [ "v4", "fast-rng", "macro-diagnostics", "serde" ]
